--- a/WithAngular6/package.json
+++ b/WithAngular6/package.json
@@ -5,6 +5,19 @@
   "scripts": {
     "test": "karma start ClientApp/test/karma.conf.js"
   },
+  "dependencies": {
+    "@angular/animations": "4.3.0",
+    "@angular/common": "4.3.0",
+    "@angular/compiler": "4.3.0",
+    "@angular/compiler-cli": "4.3.0",
+    "@angular/core": "4.3.0",
+    "@angular/forms": "4.3.0",
+    "@angular/http": "4.3.0",
+    "@angular/platform-browser": "4.3.0",
+    "@angular/platform-browser-dynamic": "4.3.0",
+    "@angular/platform-server": "4.3.0",
+    "@angular/router": "4.3.0"
+  },
   "devDependencies": {
     "@angular/animations": "4.3.0",
     "@angular/common": "4.3.0",
